css/style.css
/*---------------------------------------------------------
                    # Start Global Rules
---------------------------------------------------------*/
/* Embad The Font */
@import url('https://fonts.googleapis.com/css?family=Sunflower:300');

/* Rest The Page */
*
{
    margin: 0;
    padding: 0;
    border: 0;
    outline: 0;
    box-sizing: border-box
}

body,
html
{
    min-height: 100vh;
    font-family: 'Sunflower', sans-serif
}

body
{
    /* Background pattern from Subtle Patterns */
    background: #ffffff url('../img/geometry2.png')
}

ul{list-style-type: none}

main
{
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 20px 30px 30px
}

.game-container{width: 500px}

.primary-btn
{
    display: block;
    width: 120px;
    height: 30px;
    color: #fff;
    background-color: #00b9a6;
    line-height: 30px;
    font-weight: 700;
    text-transform: capitalize;
    border-radius: 3px;
    margin: 0 auto 20px;
    cursor: pointer;
    transition: .4s ease-in
}

.primary-btn:hover
{
    box-shadow: 5px 2px 20px 0 rgba(46, 61, 73, 0.5);
    transition: .4s ease-in
}

.hide-msg{display: none}

.red-border{border-color: #f00!important}

/* .green-border{border-color: rgb(0, 136, 0)!important} */
/*---------------------------------------------------------
                    # End Global Rules
---------------------------------------------------------*/

/*---------------------------------------------------------
                    # Start High Score Rules
---------------------------------------------------------*/
.gamer-name-modal,
.last-scores-modal
{
    position: fixed;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    z-index: 100;
    background-color: #aa7ecd;
    transform: scale(1);
    transform-origin: center;
    transition: .5s;
    display: flex;
    justify-content: center;
    align-items: center
}

.gamer-info,
.last-scores
{
    width: 350px;
    background-color: #fff;
    border-radius: 4px;
    padding: 30px 10px;
    text-align: center
}

.warning-msg
{
    position: relative;
    width: 95%;
    color: #861C57;
    background-color: #F8D7DA;
    padding: 10px;
    margin: auto;
    text-align: center;
    line-height: 150%;
    border-radius: 4px;
    font-size: .9em;
}

.warning-msg::after
{
    content: "";
    position: absolute;
    bottom: -10px;
    left: 50%;
    transform: translateX(-50%);
    border-width: 10px 10px 0 10px;
    border-style: solid;
    border-color: #F8D7DA transparent
}

.gamer-name
{
    width: 95%;
    margin: 0 auto 30px;
    padding: 15px 10px;
    border-radius: 4px;
    border: 1px solid #563d7c;
    background-color: #cbbde2;
    color: #563D7C;
    font-size: .8em;
    text-transform: uppercase
}

.save-name,
.open-latest-scores
{background-color:#563d7c; color: #ffe484}

.close-btn
{
    position: absolute;
    top: 20px;
    right: 20px;
    width: 25px;
    height: 25px;
    line-height: 25px;
    text-align: center;
    background-color: #fff;
    border-radius: 50%;
    font-size: 1.75em;
    color: #aa7ecd;
    cursor: pointer;
    box-shadow: 5px 2px 20px 0 rgba(46, 61, 73, 0.5)
}

.last-scores-modal{transform: scale(0); z-index: 999}

.show-modal{transform: scale(1); transition: .5s}

.hide-modal{transform: scale(0); transition: .5s}

.title{text-transform: capitalize; color: #ffe484; margin-bottom: 30px}

.score
{
    background-color: #563d7c;
    padding: 10px;
    border-radius: 4px;
    text-align: left;
    display: flex;
    justify-content: space-between
}

.score + .score{margin-top: 10px}

.item{width: calc((100% - 5%) / 3); color: #cbbde2}

.item .fa{color: #ffe484; padding-right: 8px}
/*---------------------------------------------------------
                    # End High Score Rules
---------------------------------------------------------*/

/*---------------------------------------------------------
                # Start Game Header Rules
---------------------------------------------------------*/
.game-header .game-name
{
    font-weight: 500;
    font-size: 2.2em;
    text-transform: capitalize;
    text-align: center;
    margin-bottom: 30px
}
/*---------------------------------------------------------
                # End Game Header Rules
---------------------------------------------------------*/

/*---------------------------------------------------------
                # Start Game Settings Rules
---------------------------------------------------------*/
.settings
{
    width: 100%;
    display: flex;
    justify-content: space-between;
    padding-bottom: 20px
}

.settings .stars
{
    min-width: 90px;
    display: flex;
    color: #fdd003;
    font-size: 1.2em
}

.decrease-rating{color: transparent}

.timer .fa
{
    font-size: 1.2em;
    margin-right: 10px;
    vertical-align: middle;
    color: #02ccba
}

.timer .time{display: inline-block; height: 100%; vertical-align: middle}

.timer .time:first-of-type{padding-right: 5px}

.timer .time + .time{padding-right: 5px}

.settings .moves{min-width: 65px; text-transform: capitalize; color: #02ccba}

.settings .moves .moves-number{color: #000}

.settings .reset-game,
.settings .top-five
{
    color: #02ccba;
    font-size: 1.2em;
    cursor: pointer
}

.settings .reset-game:hover .fa
{
    transform: rotate(360deg);
    transform-origin: center;
    transition: .5s;
}

.settings .last-five{color: #fdd003; cursor: pointer}
/*---------------------------------------------------------
                # End Game Settings Rules
---------------------------------------------------------*/

/*---------------------------------------------------------
                # Start Deck Rules
---------------------------------------------------------*/
.deck
{
    width: 100%;
    padding: 40px 20px 20px;
    border-radius: 6px;
    background: linear-gradient(160deg, #02ccba 0%, #aa7ecd 100%);
    box-shadow: 12px 15px 20px 0 rgba(46, 61, 73, 0.5);
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    perspective: 500px
}

.card
{
    position: relative;
    width: 100px;
    height: 100px;
    color: #fff;
    background-color: #2e3d49;
    font-size: 1.75em;
    text-align: center;
    margin-bottom: 20px;
    border-radius: 6px;
    box-shadow: 5px 2px 20px 0 rgba(46, 61, 73, 0.5);
    transform: rotateY(180deg) translateX(0);
    transform-style: preserve-3d;
    transform-origin: center;
    transition: .5s ease
}

.deck .card .symbol
{
    display: block;
    width: 100%;
    height: 100%;
    line-height: 100px;
    border-radius: 6px;
    backface-visibility: hidden
}

.flip-card
{
    background-color: #02b3e4;
    transform: rotateY(0deg) translateX(0);
    transition: .5s ease
}

.display-symbol{backface-visibility: visible}

.match{background-color: #02ccba; animation: matchAnimate .5s}

@keyframes matchAnimate
{
    0% {transform: scale(1, 1); transition: .4s ease-in}

    20%, 60% {transform: scale(.9, 1.1); transition: .4s ease-in}

    40%, 80% {transform: scale(1.3, .7); transition: .4s ease-in}

    100% {transform: scale(1, 1); transition: .4s ease-in}
}

.unmatch{animation: unmatchAnimate .6s}

.hide-symbol{backface-visibility: hidden; transition-delay: .6s}

@keyframes unmatchAnimate
{
    0%
    {
        background-color: #f85c3e;
        transform: rotateY(0deg) translateX(-10px);
        transition: .4s ease-in
    }

    15%
    {
        background-color: #f85c3e;
        transform: rotateY(0deg) translateX(10px);
        transition: .4s ease-in
    }

    30%
    {
        background-color: #f85c3e;
        transform: rotateY(0deg) translateX(-10px);
        transition: .4s ease-in
    }

    45%
    {
        background-color: #f85c3e;
        transform: rotateY(0deg) translateX(10px);
        transition: .4s ease-in
    }

    55%, 100%
    {
        background-color: #2e3d49;
        transform: rotateY(180deg) translateX(0);
        transition: .6s ease
    }
}
/*---------------------------------------------------------
                # End Deck Rules
---------------------------------------------------------*/

/*---------------------------------------------------------
                # Start Modal Rules
---------------------------------------------------------*/
.modal
{
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: #aa7ecd;
    display: flex;
    justify-content: center;
    align-items: center;
    transform: scale(0);
    transform-origin: center;
    transition: .5s ease-out
}

.display-modal{transform: scale(1); transition: .5s}

.successful-modal
{
    width: 400px;
    min-height: 200px;
    background-color: #fff;
    text-align: center;
    border-radius: 2px
}

.check-symbol-container
{
    width: 70px;
    height: 70px;
    margin: 20px auto;
    border-radius: 50%;
    border: 3px solid #6ca230;
    display: flex;
    justify-content: center;
    align-items: center
}

.check-symbol
{
    width: 30px;
    height: 15px;
    position: relative;
    transform: rotate(-45deg);
    margin-top: -7.5px
}

.check-symbol::before
{
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    width: 3px;
    height: 0;
    background-color: #6ca230
}

.check-symbol::after
{
    content: "";
    position: absolute;
    bottom: 0;
    left: 0;
    width: 0;
    height: 3px;
    background-color: #6ca230
}

.animate-circle
{
    transform: rotate(-360deg);
    transform-origin: center;
    transition: .3s ease-in .3s
}

.animate-check::before{height: 100%; transition: height .3s ease-in .3s}

.animate-check::after{width: 100%; transition: width .3s ease-in .6s}

.successful-msg{text-transform: capitalize; padding: 0 20px 20px}

.successful-msg h3{margin-bottom: 10px}

.successful-msg p{line-height: 1.5em; color: #666}

.successful-msg strong{font-weight: 600}

.successful-msg .fa-star,
.successful-msg .fa-trophy
{color: #fdd003}

.successful-msg .fa-clock-o{color: #02ccba}
/*---------------------------------------------------------
                # End Modal Rules
---------------------------------------------------------*/

/*---------------------------------------------------------
                # Start Responsive Version
---------------------------------------------------------*/
@media screen and (max-width: 520px) {

    .settings{flex-wrap: wrap}

    .settings .stars,
    .settings .timer
    {width: 50%}

    .settings .stars,
    .settings .timer
    {margin-bottom: 20px}


    .settings .moves,
    .settings .reset-game,
    .settings .last-five
    {width: calc(100% / 3)}

    .settings .reset-game{text-align: center}

    .settings .last-five,
    .settings .timer
    {text-align: right}

    .card{width: 90px; height: 90px; font-size: 1.50}

    .deck .card .symbol{line-height: 90px}

    .successful-modal{width: 300px}
}

@media screen and (max-width: 400px) {

    .gamer-info{width: 300px}

    .last-scores{width: 300px}

    .score{text-align: center}

    .item .fa{display: block; padding: 0}

    .card{width: 70px; height: 70px; font-size: 1.25em}

    .deck .card .symbol{line-height: 70px}
}
/*---------------------------------------------------------
                # End Responsive Version
---------------------------------------------------------*/

